--- a/src/css/util.less
+++ b/src/css/util.less
@@ -4,6 +4,7 @@
 }
 
 @mobile: ~"(max-width: 480px)";
+@small-mobile: ~"(max-width: 320px)";
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
 
 // COLORS
