--- a/src/partials/_adTop.html
+++ b/src/partials/_adTop.html
@@ -1,6 +1,5 @@
-<div id="adtopright">
-  <img src="http://seattletimes.com/art/ui/adv_top.gif" width="7" height="70" alt="Advertising" class="ui floatleft" />
-    <script>
-    OAS_AD('TopRight');
-    </script>
+<div id="adtopright" class="sponsor-logo">
+  <script>
+  OAS_AD('x95');
+  </script>
 </div>
