--- a/src/partials/_adHead.html
+++ b/src/partials/_adHead.html
@@ -37,9 +37,9 @@
 <script type="text/javascript">
 <!--
 //modify for specific page info
-OAS_sitepage = 'www.seattletimes.com/business';
+OAS_sitepage = 'www.seattletimes.com/sports/football/seahawks/fanmap';
 OAS_query = '?<%= grunt.data.json.project.tags && grunt.data.json.project.tags.join("&") %>';
-OAS_listpos = 'Position1,TopRight,Right1,Top,Top1,Middle3,Position3,Right,Right2,Bottom,Top3';
+OAS_listpos = 'x95';
 //-->
 </script>
 <script src="http://seattletimes.com/js/standardFunctionality/AdTags.js"></script>
